--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -8,10 +8,12 @@ end
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.1'
+# Repository for collecting Locale data for Ruby on Rails I18n as well as other interesting, Rails related I18n stuff
+gem 'rails-i18n', '~> 5.0.1'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.3', '< 1.4'
 # Use Puma as the app server
-gem 'puma', '~> 3.0'	
+gem 'puma', '~> 3.0'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.5'
 # Use Redis adapter to run Action Cable in production
@@ -29,6 +31,7 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
   gem 'faker'
+  gem 'pry-rails'
 end
 
 group :development do
