--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -16,6 +16,9 @@ gem 'sqlite3', '~> 1.3', '< 1.4'
 gem 'puma', '~> 3.0'
 # A pure implementation of the RFC 7519 OAuth JSON Web Token (JWT) standard
 gem 'jwt'
+gem 'devise_token_auth', '~> 1.1.0'
+
+gem 'devise-i18n'
 
 gem 'foreman'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
