--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -20,7 +20,10 @@ gem 'devise_token_auth', '~> 1.1.0'
 #A plugin for versioning Rails based RESTful APIs.
 gem 'versionist'
 
-
+#⚡ A Scope & Engine based, clean, powerful, customizable and sophisticated paginator for Ruby webapps
+gem 'kaminari'
+# page_facing_up Link header pagination for Rails and Grape APIs.
+gem 'api-pagination'
 
 gem 'devise-i18n'
 
