--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -23,7 +23,7 @@ gem 'versionist'
 #⚡ A Scope & Engine based, clean, powerful, customizable and sophisticated paginator for Ruby webapps
 gem 'kaminari'
 # page_facing_up Link header pagination for Rails and Grape APIs.
-gem 'api-pagination'
+# gem 'api-pagination'
 
 gem 'devise-i18n'
 
